# cc-msg-history-viewer

./: Cargo.toml  PLAN.md  README.md  RELEASE_PLAN.md  dev.sh
.github/workflows/: ci.yml  release.yml
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MessageItem.tsx  MessageList.tsx  SearchBar.tsx  Sidebar.tsx  StatsPanel.tsx
frontend/src/stores/: filters.ts
src/: handlers.rs  main.rs  models.rs  store.rs
