[package]
name = "cc-msg-viewer"
version = "1.0.2"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
clap = { version = "4", features = ["derive", "env"] }
notify = "6"

[dev-dependencies]
tempfile = "3"
